--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,3 @@
 <%- include('header') -%>
-
-    <h1><%= content %></h1>
-    <%= Math.random() %>
-    <h3><%- unescapedcontent %></h3>
-    
+  <div id="root"><%- content %></div>
 <%- include('footer') -%>
